crates/keron-lang/tests/corpus/errors/check/sort_rejects_non_string_list.keron
# `sort` is deliberately non-generic on `List<String>`; passing
# `List<Int>` is a type error rather than a silent identity (see
# `IntrinsicId::Sort` for why a generic comparator was rejected).
val xs: List<String> = sort([3, 1, 2])
